--- a/Program/TimeAndTune/TimeAndTune/Pages/LoginPage.xaml
+++ b/Program/TimeAndTune/TimeAndTune/Pages/LoginPage.xaml
@@ -188,12 +188,22 @@
              Foreground="White"
              FontSize="48"
         />
+        <TextBox
+            Name="errorLoginEmail"
+            Text=""
+            Foreground="Red"
+            Background="Transparent"
+            Margin="0,720,0,0"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Center"
+            BorderBrush="Transparent"
+            FontSize="20"/>
         <Button
             Margin="0,795,0,0"
             Width="342" Height="112"
             VerticalAlignment="Top"
             HorizontalAlignment="Center"
-            Click="Continue_Click"
+            Click="SignIn_Click"
             >
             <Button.Style>
                 <Style TargetType="Button">
