--- a/Program/TimeAndTune/TimeAndTune/Pages/HomePage.xaml
+++ b/Program/TimeAndTune/TimeAndTune/Pages/HomePage.xaml
@@ -57,6 +57,7 @@
         </Style>
 
         <local:CustomTaskStatusToColorConverter x:Key="TaskStatusToColorConverter" />
+        <local:CustomTaskStatusToImage x:Key="TaskStatusToImage"/>
     </Page.Resources>
 
 
@@ -337,31 +338,8 @@
                                 Margin="-1120,45,0,0"
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Top"
-                                Source="/Pages/uncheckmark.png"
+                                Source="{Binding Completed, Converter={StaticResource TaskStatusToImage}}"
                                 Visibility="Visible" />
-                            <Button
-                                Width="50"
-                                Height="50"
-                                Margin="-1200,0,0,0"
-                                Background="{x:Null}"
-                                BorderThickness="0"
-                           
-                                Visibility="Visible">
-                                <Button.Style>
-                                    <Style TargetType="Button">
-                                        <Setter Property="BorderThickness" Value="0" />
-                                        <Setter Property="Cursor" Value="Hand" />
-                                        <Setter Property="Template">
-                                            <Setter.Value>
-                                                <ControlTemplate>
-                                                    <Border Background="Transparent" />
-                                                </ControlTemplate>
-                                            </Setter.Value>
-                                        </Setter>
-                                    </Style>
-                                </Button.Style>
-                            </Button>
-
                             <TextBlock
                                 MaxWidth="600"
                                 Margin="-1030,35,0,0"
